--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -153,10 +153,10 @@ http://ionicframework.com/docs/theming/ */
    */
 
   .ios body {
-    --ion-background-color: #000000;
-    --ion-background-color-rgb: 0,0,0;
+    --ion-background-color: #FFFFFF;
+    --ion-background-color-rgb: 255,255,255;
 
-    --ion-text-color: #ffffff;
+    --ion-text-color: #1447A6;
     --ion-text-color-rgb: 255,255,255;
 
     --ion-color-step-50: #0d0d0d;
@@ -186,7 +186,7 @@ http://ionicframework.com/docs/theming/ */
 
   .ios ion-modal {
     --ion-background-color: var(--ion-color-step-100);
-    --ion-toolbar-background: var(--ion-color-step-150);
+    --ion-toolbar-background: #FFFFFF;
     --ion-toolbar-border-color: var(--ion-color-step-250);
   }
 
@@ -197,10 +197,10 @@ http://ionicframework.com/docs/theming/ */
    */
 
   .md body {
-    --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
+    --ion-background-color: #FFFFFF;
+    --ion-background-color-rgb: 255,255,255;
 
-    --ion-text-color: #ffffff;
+    --ion-text-color: #1447A6;
     --ion-text-color-rgb: 255,255,255;
 
     --ion-border-color: #222222;
@@ -227,9 +227,9 @@ http://ionicframework.com/docs/theming/ */
 
     --ion-item-background: #1e1e1e;
 
-    --ion-toolbar-background: #1f1f1f;
+    --ion-toolbar-background: #FFFFFF;
 
-    --ion-tab-bar-background: #1f1f1f;
+    --ion-tab-bar-background: #FFFFFF;
 
     --ion-card-background: #1e1e1e;
   }
