--- a/src/pages/Regionalism/styles.css
+++ b/src/pages/Regionalism/styles.css
@@ -1,4 +1,4 @@
-.Regionalism-Title {
+.regionalism-title {
     position: relative;
     left: 15.56%;
     right: 53.61%;
@@ -14,7 +14,7 @@
     color: #1447A6;
 }
 
-.Regionalism-InfoBasic {
+.regionalism-infobasic {
     font-family: Rawline;
     font-style: normal;
     font-weight: 600;
@@ -23,7 +23,7 @@
     color: #747474;
 }
 
-.Regionalism-Toolbar-Icon {
+.regionalism-toolbar-icon {
     position: relative;
     left: 5.28%;
     right: 89.72%;
@@ -32,21 +32,7 @@
     /* Primary - dark */
 }
 
-.about-icon-save {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 8px 16px;
-    position: relative;
-    width: 78px;
-    height: 39px;
-    left: 250px;
-    top: 577px;
-    border-radius: 24px;
-}
-
-.Regionalism-Acre {
+.regionalism-text {
     font-family: Rawline;
     font-style: normal;
     font-weight: normal;
@@ -57,121 +43,7 @@
     text-indent: 10px;
 }
 
-.Regionalism-Alagoas {
-    font-family: Rawline;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16.8px;
-    line-height: 100%;
-    /* identical to box height, or 17px */
-    color: #747474;
-    text-indent: 10px;
-}
-
-.Regionalism-Amapá {
-    font-family: Rawline;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16.8px;
-    line-height: 100%;
-    /* identical to box height, or 17px */
-    color: #747474;
-    text-indent: 10px;
-}
-
-.Regionalism-Amazonas {
-    font-family: Rawline;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16.8px;
-    line-height: 100%;
-    /* identical to box height, or 17px */
-    color: #747474;
-    text-indent: 10px;
-}
-
-.Regionalism-Bahia {
-    font-family: Rawline;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16.8px;
-    line-height: 100%;
-    /* identical to box height, or 17px */
-    color: #747474;
-    text-indent: 10px;
-}
-
-.Regionalism-Brasil {
-    font-family: Rawline;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16.8px;
-    line-height: 100%;
-    /* identical to box height, or 17px */
-    color: #747474;
-    text-indent: 10px;
-}
-
-.Regionalism-Ceará {
-    font-family: Rawline;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16.8px;
-    line-height: 100%;
-    /* identical to box height, or 17px */
-    color: #747474;
-    text-indent: 10px;
-}
-
-.Regionalism-DistritoFederal {
-    font-family: Rawline;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16.8px;
-    line-height: 100%;
-    /* identical to box height, or 17px */
-    color: #747474;
-    text-indent: 10px;
-}
-
-.Regionalism-EspiritoSanto {
-    font-family: Rawline;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16.8px;
-    line-height: 100%;
-    /* identical to box height, or 17px */
-    color: #747474;
-    text-indent: 10px;
-}
-
-.Regionalism-Goiás {
-    font-family: Rawline;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16.8px;
-    line-height: 100%;
-    /* identical to box height, or 17px */
-    color: #747474;
-    text-indent: 10px;
-}
-
-.Regionalism-Maranhão {
-    font-family: Rawline;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16.8px;
-    line-height: 100%;
-    /* identical to box height, or 17px */
-    color: #747474;
-    text-indent: 10px;
-}
-
-.button-save {}
-
-.Regionalism-Footer {}
-
-.Regionalism-Icon-Save {
+.regionalism-icon-save {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -180,21 +52,21 @@
     padding: 16px 32px;
 }
 
-.Regionalism-List {
+.regionalism-list {
     padding-bottom: 16px;
 }
 
 ion-radio {
-    --color-checked: blue;
+    --color-checked: #1447a6;
 }
 
-.Regionalism-Item {
+.regionalism-item {
     --background-focused: #ededed;
     --inner-padding-end: 32px;
     -inner-padding-start: 16px;
 }
 
-.Regionalism-Save {
+.regionalism-save {
     --border-radius: 24px;
     --padding-end: 16px;
     --padding-start: 16px;
@@ -203,7 +75,7 @@ ion-radio {
     --background-color: #1447a6;
 }
 
-.Regionalism-Cancel {
+.regionalism-cancel {
     --background: transparent;
     --box-shadow: 0;
     --color: #1447a6;
