--- a/src/pages/Historic/styles.css
+++ b/src/pages/Historic/styles.css
@@ -176,16 +176,19 @@
     background: #EDEDED;
     margin-top: 8px;
     margin-bottom: 8px;
+    color: #565656;
 }
 .historic-container-ion-chips-box-text-2{
     font-family: Rawline;
     background: #EDEDED;
     margin-top: 8px;
     margin-bottom: 8px;
+    color: #565656;
 }
 .historic-container-ion-chips-box-text-3{
     font-family: Rawline;
     background: #EDEDED;
     margin-top: 8px;
     margin-bottom: 8px;
+    color: #565656;
 }
