Dictionary page fixes

--- a/src/pages/Dictionary/styles.css
+++ b/src/pages/Dictionary/styles.css
@@ -6,7 +6,49 @@
   justify-content: flex-start;
   margin: 0;
 }
+.dictionary-box {
+  display: flex;
+  flex-direction: column;
+  
+  width: 100%;
+  padding: 16px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
 
+.dictionary-input-box {
+  position: relative;
+}
+
+.dictionary-textarea:hover {
+  --background: #FFF5CC;
+  border: 1px solid #1447a6;
+}
+.dictionary-textarea {
+  border: 1px solid #B9B9B9;
+  box-sizing: border-box;
+  border-radius: 4px;
+  font-family: Rawline;
+  z-index: 0;
+  color: #B9B9B9;
+
+  margin-top: 8px;
+  /*height: 100%;*/
+  height: 44px;
+  width: 100%;
+}
+.dictionary-mic-button{
+    background: none;
+    position: absolute;
+    top: 22px;
+    right: 8px;
+    z-index: 1;
+
+    display: flex;
+    flex: 1;
+    justify-content: flex-end;
+    
+}
 .dictionary-container-ion-chips {
   display: flex;
   flex-direction: row;
@@ -68,17 +110,34 @@
   color: #4b4b4b;
   background: #ededed;
 }
-.dictionary-container-ion-text-suggestions{
+.dictionary-words-style{
+  font-family: Rawline;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16.8px;
+  line-height: 130%;
+  
+  color: #1447A6;
+}
+.dictionary-words-list{
   display: flex;
   flex-direction: column;
   flex: 1;
-  gap:22px;
-
+  padding: 0 0 0 0;
+  gap: 22px;
   margin-top: 35px;
-  margin-left: 31px;
 
   font-family: Rawline;
   color: #1447A6;
+
+}
+.dictionary-words-container{
+}
+.dictionary-word-item{
+  --padding-start: 0px;
+  --min-height: 0px;
+
+  margin-left: 31px;
 }
 .dictionary-container-box-ion-text {
   display: flex;
@@ -116,4 +175,3 @@
 .dictionary-container-box-ion-mic-icon{
   color:#B9B9B9;
 }
-
