--- a/src/pages/Dictionary/styles.css
+++ b/src/pages/Dictionary/styles.css
@@ -24,13 +24,14 @@
   --background: #FFF5CC;
   border: 1px solid #1447a6;
 }
-.dictionary-textarea {
+.dictionary-textarea{
   border: 1px solid #B9B9B9;
   box-sizing: border-box;
   border-radius: 4px;
   font-family: Rawline;
   z-index: 0;
-  color: #B9B9B9;
+  color: #000;
+  --placeholder-color: #B9B9B9;
 
   margin-top: 8px;
   /*height: 100%;*/
