--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -83,6 +83,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-bullet-deactived: #d6e5f9;
   --ion-color-bullet-actived: var(--ion-color-modal-title);
   --ion-color-grey-75: rgba(0, 0, 0, 0.75);
+  --ion-color-grey-65: rgba(0, 0, 0, 0.65);
 }
 
 @media (prefers-color-scheme: dark) {
