--- a/src/pages/Dictionary/styles.css
+++ b/src/pages/Dictionary/styles.css
@@ -19,12 +19,11 @@
 .dictionary-input-box {
   position: relative;
 }
-
 .dictionary-textarea:hover {
   --background: #FFF5CC;
   border: 1px solid #1447a6;
 }
-.dictionary-textarea{
+.dictionary-textarea {
   border: 1px solid #B9B9B9;
   box-sizing: border-box;
   border-radius: 4px;
@@ -35,18 +34,38 @@
 
   margin-top: 8px;
   /*height: 100%;*/
+  /*SearchBar*/
   height: 44px;
   width: 100%;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  border-left-width: 0px;
+  margin-top: 8px;
+  padding-right: 0px;
+  padding-left: 0px;
+  border-right-width: 0px;
+  border-bottom-width: 0px;
+  border-top-width: 0px;
+
+  /*SearchBar Icon*/
+  background-image: none!important;
+}
+.searchbar-input {
+  padding-left: 9px !important;
+}
+.searchbar-clear-button .sc-ion-searchbar-md{
+  color:#1447a6;
+  width: 16px;
+  height: 24px;
 }
 .dictionary-mic-button{
     background: none;
     position: absolute;
-    top: 22px;
-    right: 8px;
+    top: 19.5px;
+    right: 23.5px;
     z-index: 1;
-
-    display: flex;
-    flex: 1;
+    /*display: flex;
+    flex: 1;*/
     justify-content: flex-end;
     
 }
@@ -131,8 +150,6 @@
   font-family: Rawline;
   color: #1447A6;
 
-}
-.dictionary-words-container{
 }
 .dictionary-word-item{
   --padding-start: 0px;
