--- a/src/pages/TranslatorPT/styles.css
+++ b/src/pages/TranslatorPT/styles.css
@@ -9,7 +9,7 @@
 
 .home-vide-info {
   text-align: right;
-  background-color: #FAFAFA;
+  background-color: #fafafa;
   padding: 32px;
   color: black;
   word-break: break-all;
