--- a/src/components/RecorderArea/styles.css
+++ b/src/components/RecorderArea/styles.css
@@ -1,16 +1,3 @@
-.main-area-recorder {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  margin: auto;
-  height: 75%;
-}
-
-.main-area-recorder img {
-  z-index: -1;
-  margin: auto;
-}
-
 .title-recorder {
   font-family: Rawline;
   text-align: center;
@@ -40,4 +27,60 @@
   font-size: 12px;
   margin: 0px;
   text-align: center;
+}
+
+.main-area-recorder {
+  margin: auto;
+  height: 75%;
+  padding: 20px;
+}
+
+.main-area-recorder .bg-img {
+  position: absolute;
+  margin: auto;
+  top: -70px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
+
+.main-area-recorder .title-area {
+  font-family: Rawline;
+  display: inline-flex;
+  width: 100%;
+  color: #1b1b1b;
+  font-size: 14px;
+}
+
+.main-area-recorder .logo-icon {
+  margin-right: 7px;
+}
+
+.main-area-recorder .title {
+  display: inline-flex;
+  width: 100%;
+}
+
+.main-area-recorder .container-outputs {
+  border: 1px solid #e0e0e0;
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding: 10px 8px;
+  overflow: hidden;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+.main-area-recorder .container-outputs span {
+  font-family: Rawline;
+  background: #ededed;
+  color: #565656;
+  font-size: 14px;
+  line-height: 17.5px;
+  border-radius: 48px;
+  padding: 6px 12px;
+  margin-left: 3px;
+  cursor: pointer;
+  display: inline-block;
 }
