--- a/src/pages/RecorderArea/styles.css
+++ b/src/pages/RecorderArea/styles.css
@@ -45,6 +45,10 @@
   z-index: -1;
 }
 
+.main-area-recorder .bg-img.bg-opacity {
+  opacity: 0.6;
+}
+
 .main-area-recorder .title-area {
   font-family: Rawline;
   display: inline-flex;
