--- a/src/components/VideoOutputModal/styles.css
+++ b/src/components/VideoOutputModal/styles.css
@@ -13,6 +13,10 @@
   height: 420px;
 }
 
+.videooutput-modal.buttons-off .modal-wrapper {
+  height: 350px;
+}
+
 .videooutput-modal .ion-page {
   padding: 16px 20px;
 }
