--- a/src/pages/SignalCapture/styles.css
+++ b/src/pages/SignalCapture/styles.css
@@ -73,3 +73,135 @@
   position: absolute;
   right: 20px;
 }
+.area-button-recorder {
+  position: relative;
+  display: inline-block;
+  }
+
+/* Tooltip text */
+.area-button-recorder .tooltiptext {
+  visibility: hidden;
+  width: 170px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 30px;
+
+  /* Posição do tooltip text */
+  position: absolute;
+  bottom: 110%;
+  left: 20%;
+  margin-left: -60px;
+
+  /* transição do tooltip */
+  opacity: 1;
+  transition-duration: 2s;
+   
+}
+
+/* Mostra o tooltip text quando o mouse passa por cima do tooltip container */
+.area-button-recorder:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+.alert-message.sc-ion-alert-md {
+
+  font-family: Rawline;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: center;
+  /* Altera a mensagem do popup*/
+  position:absolute;
+  display: flex;
+  align-items: center;
+  text-align:left;
+  padding-bottom: 3px;
+  bottom: 45%;
+  
+  color: #A3A3A3;
+  
+}
+
+
+.alert-title.sc-ion-alert-md {
+
+  font-family: Rawline;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: center;
+  
+/* Altera o titulo do popup */
+
+align-items: center;
+text-align: center;
+justify-content: center;
+
+color: #000000;
+}
+
+
+.alert-wrapper.sc-ion-alert-md {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: var(--width);
+  min-width: var(--min-width);
+  max-width: var(--max-width);
+  height: var(--height);
+  min-height: var(--min-height);
+  max-height: var(--max-height);
+  background: var(--background);
+  contain: content;
+  opacity: 0;
+  z-index: 10;
+  background: #FFFFFF;
+  border-radius: 8px;
+  position: absolute;  
+  font-size: 18px;
+  width: 224px;
+  height: 128px;
+  /* Altera a box */
+
+  
+}
+.alert-button-group.sc-ion-alert-md{
+  justify-content: center;
+  padding-right:35px;
+ 
+}
+
+.popup-yes.alert-button.sc-ion-alert-md{
+  color: gray;
+  height: 24px;
+  width: 39px;
+  left: 16px;
+  top: 4px;
+                                                                        
+}
+.popup-no.alert-button.sc-ion-alert-md{
+  color: gray;
+  height: 24px;
+  width: 39px;
+  left: 16px;
+  top: 4px;
+                                                                        
+}
+.popup-yes.alert-button.sc-ion-alert-md:focus{
+  color: blue;
+}
+.popup-yes.alert-button.sc-ion-alert-md:focus{
+  color: blue;
+}
+
+.alert-message .sc-ion-alert-md {
+
+
+}
