* Fixed key bug * Integrated with server mock passing blob file * Loading videos thumbnails * Loading video duration

--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -11,5 +11,9 @@
     <param name="android-package" value="nl.xservices.plugins.videocaptureplus.VideoCapturePlus"/>
   </feature>
 
+  <feature name="VideoEditor">
+    <param name="android-package" value="org.apache.cordova.videoeditor.VideoEditor"/>
+  </feature>
+
   
 </widget>
