--- a/src/components/DrawerMenu/styles.css
+++ b/src/components/DrawerMenu/styles.css
@@ -3,9 +3,27 @@
 }
 
 .drawer-menu-image-header {
-  width: 111px;
-  height: 38px;
-  margin: 16px 32px 0 32px;
+  /*width: 111px;
+  height: 38px;*/
+  margin-left: 32px;
+}
+
+.drawer-menu-header-logo{
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+}
+.drawer-menu-header-label{
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  letter-spacing: 0.3px;
+  color: #373F41;
+
+  margin-left: 4px;
+
+  align-self: center;
 }
 
 .drawer-menu-divider {
@@ -23,7 +41,6 @@
   color: #939293;
   margin: 16px 8px 8px 8px;
 }
-
 
 .drawer-menu-item {
   font-family: Rawline;
