--- a/src/pages/Translator/styles.css
+++ b/src/pages/Translator/styles.css
@@ -1,85 +1,88 @@
 .translator-textarea {
-    border: 1px solid #BABABA;
-    width: 100%;
-    box-sizing: border-box;
-    border-radius: 4px;
-    font-family: Rawline;
-    --padding-end: 36px;
-    z-index: 0;
+  border: 1px solid #bababa;
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 4px;
+  font-family: Rawline;
+  --padding-end: 36px;
+  z-index: 0;
 }
 
 .translator-input-box {
-    position: relative;
+  position: relative;
 }
 
 .translator-textarea:hover {
-    --background: #FFF5CC;
-    border: 1px solid #1447a6;
+  --background: #fff5cc;
+  border: 1px solid #1447a6;
 }
 
 .translator-box {
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.translator-button-mic {
-    width: 24px;
-    height: 24px;
-    background: #4b4b4b;
-    position: absolute;
-    top: 16px;
-    right: 8px;
-    z-index: 1;
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  flex: 1;
 }
 
 .translator-background-mic {
-    color: white;
+  color: white;
 }
 
 .translator-header {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 145%;
-    text-align: center;
-    color: #4B4B4B;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 145%;
+  text-align: center;
+  color: #4b4b4b;
 }
 
 .translator-item-button-save {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    padding: 37px;
-    flex-direction: row;
-    justify-content: center;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  padding: 37px;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .translator-button-save {
-    --border-radius: 24px;
-    --background-color: #1447a6;
-    --border-radius: 24px;
-    --padding-end: 16px;
-    --padding-start: 16px;
-    --padding-top: 8px;
-    --padding-bottom: 8px;
-    --padding-left: 3px;
+  --border-radius: 24px;
+  --background-color: #1447a6;
+  --border-radius: 24px;
+  --padding-end: 16px;
+  --padding-start: 16px;
+  --padding-top: 8px;
+  --padding-bottom: 8px;
+  --padding-left: 3px;
 }
 
 .translator-container {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex: 1;
+  height: 100%;
 }
 
 .translator-button-hands {
-    padding-right: 5px;
+  padding-right: 5px;
+}
+
+.scroll-content {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  z-index: 1;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  will-change: scroll-position;
+  contain: size style layout;
+  display: flex;
+  flex-direction: column;
 }
