--- a/src/components/ErrorModal/styles.css
+++ b/src/components/ErrorModal/styles.css
@@ -5,7 +5,8 @@
 
 .error-modal .modal-wrapper {
   border-radius: 8px;
-  height: 200px;
+  height: 180px;
+  width: 200px;
   margin: 0px 70px;
 }
 
@@ -17,13 +18,11 @@
 }
 
 .error-modal .modal-title {
-  color: var(--ion-color-modal-title);
-
-  font-weight: 700;
-  font-size: 18px;
+  font-weight: bold;
+  font-size: 16px;
   line-height: 20px;
   text-align: center;
-  margin: 20px 0px 0px 0px;
+  margin: 5px 0px -15px 0px;
 }
 
 .error-modal .modal-desc {
