Added date aggregation on history page

--- a/src/pages/Historic/styles.css
+++ b/src/pages/Historic/styles.css
@@ -183,3 +183,10 @@
   cursor: pointer;
   display: inline-block;
 }
+
+.date-desc {
+  font-size: 12px;
+  color: #1b1b1b;
+  font-family: Rawline;
+  text-align: center;
+}
