--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -84,6 +84,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-bullet-actived: var(--ion-color-modal-title);
   --ion-color-grey-75: rgba(0, 0, 0, 0.75);
   --ion-color-grey-65: rgba(0, 0, 0, 0.65);
+  --ion-color-grey-1: rgba(0, 0, 0, 0.1);
 }
 
 /*
