--- a/src/pages/Historic/styles.css
+++ b/src/pages/Historic/styles.css
@@ -13,37 +13,20 @@
   margin-left: 16px;
 }
 
-.historic-container-ion-chips-1 {
+.historic-container-ion-chip {
   font-family: Rawline;
   font-style: normal;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 12px;
   line-height: 100%;
+  color: #4b4b4b;
+  background: #ededed;
+}
 
+.historic-container-ion-chip.active {
   color: #1447a6;
-  background: #ededed;
-}
-
-.historic-container-ion-chips-2 {
-  font-family: Rawline;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 100%;
-
-  color: #4b4b4b;
-  background: #ededed;
-}
-
-.historic-container-ion-chips-3 {
-  font-family: Rawline;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 100%;
-
-  color: #4b4b4b;
-  background: #ededed;
+  background: #d6e5f9;
+  font-weight: bold;
 }
 
 .historic-container-ion-img-1 {
@@ -189,4 +172,8 @@
   color: #1b1b1b;
   font-family: Rawline;
   text-align: center;
+}
+
+.container-render-historic {
+  margin-bottom: 20px;
 }
