--- a/src/pages/Translator/styles.css
+++ b/src/pages/Translator/styles.css
@@ -57,6 +57,8 @@
   --padding-top: 8px;
   --padding-bottom: 8px;
   --padding-left: 3px;
+  text-transform: none;
+  letter-spacing: 0px;
 }
 
 .translator-container {
@@ -70,4 +72,3 @@
 .translator-button-hands {
   padding-right: 5px;
 }
-
