--- a/src/pages/Translator/styles.css
+++ b/src/pages/Translator/styles.css
@@ -4,8 +4,12 @@
   box-sizing: border-box;
   border-radius: 4px;
   font-family: Rawline;
-  --padding-end: 36px;
   z-index: 0;
+  font-style: italic;
+}
+
+.translator-textarea.translator-textarea {
+  padding: 0px 15px;
 }
 
 .translator-input-box {
@@ -37,6 +41,7 @@
   line-height: 145%;
   text-align: center;
   color: #4b4b4b;
+  margin: 20px;
 }
 
 .translator-item-button-save {
@@ -49,16 +54,16 @@
 }
 
 .translator-button-save {
+  --font-family: Roboto;
+  font-weight: 700;
   --border-radius: 24px;
-  --background-color: #1447a6;
-  --border-radius: 24px;
-  --padding-end: 16px;
-  --padding-start: 16px;
-  --padding-top: 8px;
-  --padding-bottom: 8px;
-  --padding-left: 3px;
+  --background: var(--ion-color-modal-title);
   text-transform: none;
   letter-spacing: 0px;
+}
+
+.translator-button-save svg {
+  margin-right: 8px;
 }
 
 .translator-container {
