--- a/src/pages/Historic/styles.css
+++ b/src/pages/Historic/styles.css
@@ -83,7 +83,7 @@
   margin-top: 9px;
   margin-right: 16px;
   margin-left: 16px;
-  height: 71px;
+  height: 100%;
 
   border: 1px solid #e0e0e0;
   border-radius: 4px;
