--- a/src/components/Bullets/styles.css
+++ b/src/components/Bullets/styles.css
@@ -5,7 +5,7 @@
 }
 
 .bullet {
-  width: 14px;
+  width: 5%;
   height: 14px;
   border-radius: 10px;
   background-color: var(--ion-color-bullet-deactived);
