atualizações com o problema do shirt

--- a/src/pages/Customization/styles.css
+++ b/src/pages/Customization/styles.css
@@ -6,6 +6,11 @@
     padding: 16px;
 
 }
+.player-container {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+  }
 
 .customization-menu-principal{
 
