--- a/src/components/Player/styles.css
+++ b/src/components/Player/styles.css
@@ -1,38 +1,49 @@
 .player-container {
   display: flex;
-  flex-direction: column;
   flex: 1;
+  background-color: #E4E4E4;
+  flex-direction: column;
+}
+
+.player-content-ios {
+  flex: 1;
+  background-color: #E4E4E4 !important;
+}
+
+.player-content-default {
+  background-color: #E4E4E4 !important;
 }
 
 .player-action-container {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  flex: 1;
+  justify-content: flex-end;
   height: 78px;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-items: flex-end;
   z-index: 1;
-  background: transparent;
 }
 
-.play-action-content {
+.play-action-content {   
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  height: 72px;
+  min-height: 72px;
   background: white;
 }
 
 .player-action-button {
   border: none;
-  background: #1447A6;
+  background: #1447a6;
   height: 48px;
   width: 48px;
   border-radius: 50%;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .player-action-button-microphone {
@@ -47,17 +58,110 @@
 .player-progress-container {
   width: 100%;
   height: 6px;
-  background: #D6E5F9;
+  background: #d6e5f9;
   visibility: hidden;
 }
 
 .player-progress-bar {
   width: 0;
   height: 6px;
-  background: #003F86;
+  background: #003f86;
 }
 
 .player-action-button-transparent {
   background: transparent;
   border: none;
+  height: 48px;
+  width: 48px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.player-container-buttons {
+  position: absolute;
+  padding: 16px;
+  bottom: 64px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  z-index: 1;
+}
+
+.player-button-rounded {
+  position: relative;
+  bottom: 0;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background: rgba(27, 27, 27, 0.75);
+  margin-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.player-button-rounded-top {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background: rgba(27, 27, 27, 0.75);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.player-container-button {
+  padding: 16px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  z-index: 1;
+}
+
+.player-popover {
+  --width: 64px;
+  --background: white;
+}
+
+.player-popover-content {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  text-align: center;
+  width: 64px;
+  padding: 0;
+}
+
+.player-popover-content-item-active {
+  background: #d6e5f9;
+  border: 0;
+  margin: 4px;
+  border-radius: 4px;
+  height: 33px;
+}
+
+.player-popover-content-item-none {
+  background:none;
+  border: 0;
+  margin: 4px;
+  border-radius: 4px;
+  height: 33px;
+}
+
+.player-popover-content span {
+  font-family: Rawline;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  color: #1447A6;
+}
+
+.player-popover-content-divider {
+  border: 1px solid rgba(191, 191, 191, 0.2);
 }
