--- a/src/layouts/MenuLayout/styles.css
+++ b/src/layouts/MenuLayout/styles.css
@@ -42,3 +42,12 @@
   color: #969696;
   margin-right: 8px;
 }
+
+.menu-item-link {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  margin-left: 8px;
+}
