--- a/src/pages/RecorderArea/styles.css
+++ b/src/pages/RecorderArea/styles.css
@@ -33,6 +33,8 @@
   margin: auto;
   height: 75%;
   padding: 20px;
+  border: none;
+  background: none;
 }
 
 .main-area-recorder .bg-img {
@@ -91,4 +93,9 @@
 .area-button-recorder {
   position: relative;
   display: inline-block;
+}
+
+.main-area-recorder-button-none {
+  border: 0;
+  background: none;
 }
