--- a/src/pages/Translator/styles.css
+++ b/src/pages/Translator/styles.css
@@ -49,14 +49,24 @@
 }
 
 .translator-button-save {
-  --border-radius: 24px;
-  --background-color: #1447a6;
-  --border-radius: 24px;
-  --padding-end: 16px;
-  --padding-start: 16px;
-  --padding-top: 8px;
-  --padding-bottom: 8px;
-  --padding-left: 3px;
+  border-radius: 24px;
+  background-color: #1447a6;
+  border-radius: 24px;
+  padding: 8px 16px;
+  display: flex;
+  flex-direction: row;
+}
+
+.translator-button-save span {
+  margin-left: 8px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 145%;
+  /* or 26px */
+  text-align: center;
+  color: white;
 }
 
 .translator-container {
@@ -70,4 +80,3 @@
 .translator-button-hands {
   padding-right: 5px;
 }
-
