--- a/src/components/RevisionModal/styles.css
+++ b/src/components/RevisionModal/styles.css
@@ -17,6 +17,7 @@
   display: flex;
   flex: 1;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .revision-modal-title {
@@ -29,8 +30,6 @@
   display: flex;
   flex: 1;
   width: 100%;
-  text-align: center;
-  justify-content: center;
   margin: 0 !important;
 }
 
