--- a/src/components/SuggestionFeedbackModal/styles.css
+++ b/src/components/SuggestionFeedbackModal/styles.css
@@ -5,9 +5,8 @@
 
 .suggestion-feedback-modal .modal-wrapper {
   border-radius: 8px;
-  width: 258px;
   height: 124px;
-  margin: 0px 70px;
+  margin: 0px 50px;
 }
 
 .suggestion-feedback-modal .ion-page {
@@ -26,12 +25,14 @@
 }
 
 .suggestion-feedback-modal .modal-title {
+  font-family: Rawline;
+  font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 150%;
   text-align: center;
-
-  margin-top: 16px;
+  color: #000;
+  margin: 0 !important;
   /*margin: 2px 0px -15px 0px;*/
 }
 
@@ -48,16 +49,21 @@
   padding-top: 0px;
   padding-left: 0px;
 }
-.suggestion-feedback-modal .subtitle {
-  margin-bottom: 0px;
+.suggestion-feedback-modal .subtitle{
+  margin: 0 !important;
+  margin-top: 6px;
+  color: black;
+  font-family: Rawline;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 150%;
 }
 
 .suggestion-feedback-modal .wikilibras-chip {
-  width: 230px;
   height: 34px;
 
   margin-top: 13px;
-  margin-bottom: 16px;
   padding: 8px 16px;
 
   border: 1px solid #8e8e8e;
@@ -73,5 +79,17 @@
 }
 
 .suggestion-feedback-modal .chip-text-space{
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 100%;
+  /* identical to box height, or 12px */
+  
+  display: flex;
+  align-items: center;
+  text-align: center;
+  
+  color: #3E4049;
   margin-right: 4px;
 }
